# workers_core

./: .env.example  .gitignore  Cargo.toml  README.md  wrangler.toml
.github/workflows/: deploy.yml  rust.yml
migrations/: 0001_create_shared_tables.sql
scripts/: deploy-worker-core.bat  deploy-worker-core.sh  deploy.sh  schema.sql  worker-schema.sql
src/: abuse.rs  api_clients.rs  conversation.rs  key_rotator.rs  lib.rs  mistake_memory.rs  model_router.rs  notifications.rs  payments.rs  storage_router.rs  users.rs
src/cron/: mod.rs  notification_sender.rs  storage_recovery.rs  subscription_expiry.rs
src/mcp/: http_transport.rs  mod.rs
src/models/: enums.rs  memory_map.rs  mod.rs  types.rs
tests/: integration_test.rs
