[package]
name = "worker-core"
version = "0.1.0"
edition = "2024"
authors = ["Autonomous Software Factory"]
description = "Shared Rust crate for all autonomous software factory workers"
license = "MIT"

[lib]
crate-type = ["lib", "cdylib"]
path = "src/lib.rs"

[dependencies]
# Cloudflare Workers runtime
worker = { version = "0.6", features = ["http", "d1", "queue"] }

# Async runtime
async-trait = "0.1"
futures = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# HTTP client (WASM-compatible)
reqwasm = "0.5"
gloo-net = "0.6"

# Cryptography
rsa = { version = "0.9", features = ["pem", "sha2"] }
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"
hmac = "0.12"

# JWT
jsonwebtoken = "9.3"

# UUID
uuid = { version = "1.0", features = ["v4", "serde", "js"] }

# Time
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

# Hashing
blake3 = "1.5"

# Logging
console_error_panic_hook = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"

# Random
getrandom = { version = "0.2", features = ["js"] }
fastrand = "2.0"

# URL encoding
urlencoding = "2.1"
form_urlencoded = "1.2"

# JSON Web Token for Google Drive OAuth2
simple_asn1 = "0.6"
jsonwebkey = "0.3.5"

# String enum helpers
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []
test-utils = []
